[package]
name = "iso2god"
version = "1.7.1"
description = "A Tool to Convert XBox 360 and Original XBox ISOs into an XBox 360 Compatible Games On Demand File Format"
repository = "https://github.com/Slippy2k/ISO2GoD-rs-171"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
bitflags = "2.6.0"
byteorder = "1.5.0"
clap = { version = "4.5.19", features = ["derive"] }
num_enum = "0.7.3"
rayon = "1.10.0"
sha1 = "0.10.6"

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"

[profile.release]
opt-level = 3
debug = false
strip = false
# debug-assertions = false
# overflow-checks = false
lto = true
# panic = 'unwind'
incremental = false
# codegen-units = 16
# rpath = false
